--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "src"
   ],
   "scripts": {
-    "build": "rm -rf lib/ && npx tsc --p tsconfig.json",
+    "build": "rm -rf lib/ && npx tsc --p tsconfig.json && typedoc",
     "build:node": "rm -rf node && npx tsc --p tsconfig.node.json"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "ts-patch": "^2.0.1",
+    "typedoc": "^0.22.17",
     "typescript": "^4.1.2",
     "typescript-transform-paths": "^3.3.1"
   }
