--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,11 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "typedocOptions": {
+    "entryPoints": [
+      "src/index.ts"
+    ],
+    "out": "docs"
+  },
 }
