--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zeropool-support-js",
-  "version": "0.5.0",
+  "version": "0.5.8",
   "license": "MIT",
   "author": "Dmitry Vdovin <voidxnull@gmail.com>",
   "homepage": "https://github.com/zeropoolnetwork/zeropool-api-js",
@@ -27,6 +27,7 @@
     "bn.js": "^4.11.6",
     "bs58": "^4.0.1",
     "near-api-js": "^0.43.1",
+    "near-seed-phrase": "^0.2.0",
     "tweetnacl": "^1.0.3",
     "web3": "^1.7.4",
     "web3-core": "^1.7.4",
