--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zeropool-support-js",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "license": "MIT",
   "author": "Dmitry Vdovin <voidxnull@gmail.com>",
   "homepage": "https://github.com/zeropoolnetwork/zeropool-api-js",
@@ -26,6 +26,7 @@
     "bip39-light": "^1.0.7",
     "bn.js": "^4.11.6",
     "bs58": "^4.0.1",
+    "buffer": "^6.0.3",
     "near-api-js": "^0.43.1",
     "near-seed-phrase": "^0.2.0",
     "tweetnacl": "^1.0.3",
