--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zeropool-support-js",
-  "version": "0.6.10",
+  "version": "0.6.12-dd",
   "license": "MIT",
   "author": "Dmitry Vdovin <voidxnull@gmail.com>",
   "homepage": "https://github.com/zeropoolnetwork/zeropool-api-js",
